# Solve_Ax_b

./: README.md
dense/: CMakeLists.txt  README.md
dense/src/cpu/: CMakeLists.txt  run_lapack.cpp  run_lapack.h
dense/src/cpu/test/: CMakeLists.txt  test_lapack_residual.cpp  test_lapack_simple.cpp
dense/src/gpu/: CMakeLists.txt  README.txt  run_cusolver.cpp  run_cusolver.cu  run_cusolver.h
dense/src/gpu/test/: CMakeLists.txt  test_cusolver_residual.cpp  test_cusolver_simple.cpp
dense/src/main/: CMakeLists.txt  dataset.cpp  dataset.h  main.cpp
dense/src/main/test/: CMakeLists.txt  dataset_Ab_return_test.cpp  dataset_Ab_size_test.cpp
sparse/: .project  CMakeLists.txt  README.md
sparse/data/: README  simple4.mtx
sparse/sample/: Readme.md  amg_ex_update_coef.cpp  amgx_ex.cpp  hypre_ex.cpp  octave_sparse_sample.m
sparse/src/: CMakeLists.txt
sparse/src/cpu/: CMakeLists.txt  run_hypre.cpp  run_hypre.h
sparse/src/cpu/test/: CMakeLists.txt  test_sym_matrix.cpp  test_unsym_matrix.cpp  unsym10.mtx
sparse/src/gpu/: CMakeLists.txt  run_amgx.cpp  run_amgx.h
sparse/src/gpu/test/: CMakeLists.txt  sym10.mtx  test_sym_matrix.cpp  test_unsym_matrix.cpp
sparse/src/main/: CMakeLists.txt  main.cpp  reader.cpp  reader.h
sparse/src/main/test/: CMakeLists.txt  read_sym_mtx.cpp  read_unsym_mtx.cpp  unsym10.mtx
sparse/unsymm/: .logamgx  a.out  amgx_ex.cpp  hypre_ex.cpp  octave_sparse_sample.m
